...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="RIW-3f-Ope">
                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                    <navigationItem key="navigationItem" title="GO Shows" id="V4p-hr-duz"/>
                    <connections>
                        <segue destination="zX1-F7-CDK" kind="show" id="Vup-SW-1lL"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="WRk-9M-Vbx" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
